# scenic

./: .gitignore  .gitmodules  README.md  build.bash
docker/: Dockerfile  build.bash  run.bash
lightgluestick/: CMakeLists.txt  requirements.txt
lightgluestick/cmake/: lgsConfig.cmake.in
lightgluestick/python/: lgs_py_bridge.py
lightgluestick/python/lightgluestick/: utils.py
lightgluestick/src/: lgs_frontend.cpp
scenic/: CMakeLists.txt  install.bash
scenic/cmake/: scenicConfig.cmake.in
scenic/config/: blackfly-5mm.yaml  glider-params.yaml  ros-params.yaml  segmentation.yaml  sticky-params.yaml
scenic/examples/: test_kmeans.cpp  test_lloyds.cpp  test_scenic.cpp
scenic/include/glider/core/: between_yaw_factor.hpp  differential_gps.hpp  factor_manager.hpp  glider.hpp  odometry.hpp  odometry_with_covariance.hpp  point.hpp  yaw_factor.hpp
scenic/include/glider/utils/: geodetics.hpp  parameters.hpp  time.hpp
scenic/include/scenic/core/: buffer_search_coords.hpp  database.hpp  edge.hpp  exporter.hpp  graphing_processor.hpp  homography.hpp  localization.hpp  node.hpp  odom_processor.hpp  process_buffer.hpp  processor_inputs.hpp  rectifier.hpp  scenic.hpp  segmentation_processor.hpp  stitching_inputs.hpp  stitching_processor.hpp  threaded_processor.hpp  tracking_inputs.hpp  tracking_processor.hpp
scenic/include/scenic/graphing/: edge.hpp  graph.hpp  kmeans.hpp  node.hpp  traversability.hpp
scenic/include/scenic/utils/: fixed_map.hpp  geostructs.hpp  params.hpp  transforms.hpp
scenic/include/stickyvo/: core.hpp  residuals.hpp
scenic/src/: edge.cpp  graph.cpp  graphing_processor.cpp  kmeans.cpp  node.cpp  rectifier.cpp  scenic.cpp  segmentation_processor.cpp
scenic/src/glider/: differential_gps.cpp  factor_manager.cpp  glider.cpp  odometry.cpp  odometry_with_covariance.cpp  parameters.cpp  point.cpp  time.cpp
scenic/src/scenic/: buffer_search_coords.cpp  graph.cpp  graphing_processor.cpp  homography.cpp  kmeans.cpp  localization.cpp  node.cpp  params.cpp  rectifier.cpp  scenic.cpp  segmentation_processor.cpp  stitching_processor.cpp  tracking_processor.cpp  traversability.cpp
scenic/test/: test_graph.cpp  test_scenic.cpp
